--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    
-    
+    <script src="https://apis.google.com/js/platform.js"></script>
   </head>
   <body>
     <div id="app"></div>
