--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <script src="https://apis.google.com/js/platform.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/pikaday.css"/>
   </head>
   <body>
     <div id="app"></div>
