Retain user session and app state on page refresh

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -11,6 +11,10 @@
   <body>
     <div id="app" style="height: 100%"></div>
     <script src="js/compiled/app.js"></script>
-    <script>time_tracker_web_nxt.core.init();</script>
+    <script>
+     window.onload = function () {
+         time_tracker_web_nxt.core.init();
+     }
+    </script>
   </body>
 </html>
