Make all asset paths relative to `/`
Co-authored-by: Samrat Man Singh <samrat@nilenso.com>

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,16 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Time Tracker</title>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <link rel="stylesheet" type="text/css" href="css/pikaday.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/pikaday.css"/>
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/toastr.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="css/font-awesome-4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/toastr.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/font-awesome-4.7.0/css/font-awesome.min.css"/>
   </head>
   <body>
     <div id="app" style="height: 100%"></div>
-    <script src="js/compiled/app.js"></script>
+    <script src="/js/compiled/app.js"></script>
     <script>
      window.onload = function () {
          time_tracker_web_nxt.core.init();
